--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "upstream"]
 	path = upstream
-	url = git://git.gnome.org/pygobject
+	url = https://git.merproject.org/mirror/pygobject.git
