--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "upstream"]
 	path = upstream
-	url = https://git.merproject.org/mirror/pygobject.git
+	url = https://github.com/sailfishos-mirror/pygobject.git
